--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
     <nav id="nav_f" class="default_color" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
-            <a href="#" id="logo-container" class="brand-logo">MD Template</a>
+            <a href="#" id="logo-container" class="brand-logo">juniorsev3n dot io</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#intro">Service</a></li>
                     <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="#me">Me</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#intro">Service</a></li>
                     <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="#me">Me</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
@@ -53,8 +51,7 @@
         <h1 class="text_h center header cd-headline letters type">
             <span>I Love</span> 
             <span class="cd-words-wrapper waiting">
-                <b class="is-visible">creating</b>
-                <b>designing</b>
+                <b class="is-visible">coding</b>
                 <b>developing</b>
             </span>
         </h1>
@@ -199,9 +196,9 @@
 </div>
 
 <!--Team-->
-<div class="section scrollspy" id="team">
+<div class="section scrollspy" id="me">
     <div class="container">
-        <h2 class="header text_b"> Our Team </h2>
+        <h2 class="header text_b"> Me </h2>
         <div class="row">
             <div class="col s12 m3">
                 <div class="card card-avatar">
@@ -342,30 +339,25 @@
             <div class="col l3 s12">
                 <h5 class="white-text">joashpereira.com</h5>
                 <ul>
-                    <li><a class="white-text" href="http://www.joashpereira.com/">Home</a></li>
-                    <li><a class="white-text" href="http://www.joashpereira.com/blog">Blog</a></li>
+                    <li><a class="white-text" href="http://cangkangsuuk-creative.id/">Home</a></li>
+                    <li><a class="white-text" href="https://juniorsev3n.blogspot.co.id">Blog</a></li>
                 </ul>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Social</h5>
                 <ul>
                     <li>
-                        <a class="white-text" href="https://www.behance.net/joashp">
-                            <i class="small fa fa-behance-square white-text"></i> Behance
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" href="https://www.facebook.com/joash.c.pereira">
+                        <a class="white-text" href="https://www.facebook.com/juniorsev3n">
                             <i class="small fa fa-facebook-square white-text"></i> Facebook
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://github.com/joashp">
+                        <a class="white-text" href="https://github.com/juniorsev3n">
                             <i class="small fa fa-github-square white-text"></i> Github
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://www.linkedin.com/in/joashp">
+                        <a class="white-text" href="https://www.linkedin.com/in/muhammad-irfan-maulana">
                             <i class="small fa fa-linkedin-square white-text"></i> Linkedin
                         </a>
                     </li>
@@ -375,7 +367,7 @@
     </div>
     <div class="footer-copyright default_color">
         <div class="container">
-            Made by <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a>
+           juniorsev3n.github.io | 2017
         </div>
     </div>
 </footer>
