--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#2196F3">
     <title>juniorsev3n dot github dot io</title>
 
+    <link rel="icon" href="favicon.png" type="image/png">
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
     <link href="min/custom-min.css" type="text/css" rel="stylesheet" >
@@ -15,10 +16,10 @@
 <!-- Pre Loader -->
 <div id="loader-wrapper">
     <div id="loader"></div>
- 
+
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
- 
+
 </div>
 
 <!--Navigation-->
@@ -49,7 +50,7 @@
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <h1 class="text_h center header cd-headline letters type">
-            <span>I Love</span> 
+            <span>I Love</span>
             <span class="cd-words-wrapper waiting">
                 <b class="is-visible">coding</b>
                 <b>developing</b>
@@ -195,10 +196,10 @@
     <div class="parallax"><img src="img/parallax1.png"></div>
 </div>
 
-<!--Team-->
+<!--Me-->
 <div class="section scrollspy" id="me">
     <div class="container">
-        <h2 class="header text_b"> Me </h2>
+        <h2 class="header text_b">Me </h2>
         <div class="row">
             <div class="col s12 m3">
                 <div class="card card-avatar">
@@ -206,33 +207,33 @@
                         <img class="activator" src="img/avatar1.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Flash <br/>
-                            <small><em><a class="red-text text-darken-1" href="#">CEO</a></em></small></span>
+                        <span class="card-title activator grey-text text-darken-4">Irfan Maulana <br/>
+                            <small><em><a class="red-text text-darken-1" href="#">Developer</a></em></small></span>
                         <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
+                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/juniorsev3n">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/ipehrdcl">
                                 <i class="fa fa-twitter-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
+                            <a class="blue-text text-lighten-2" href="https://plus.google.com/+MuhammadIrfanMaulana">
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
+                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/muhammad-irfan-maulana">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
                     </div>
                 </div>
             </div>
-   
+
         </div>
     </div>
 </div>
 
 <!--Footer-->
 <footer id="contact" class="page-footer default_color scrollspy">
-    <div class="container">  
+    <div class="container">
         <div class="row">
             <div class="col l6 s12">
                 <form class="col s12" action="contact.php" method="post">
@@ -261,9 +262,9 @@
                 </form>
             </div>
             <div class="col l3 s12">
-                <h5 class="white-text">joashpereira.com</h5>
+                <h5 class="white-text">juniorsev3n.github.io</h5>
                 <ul>
-                    <li><a class="white-text" href="http://cangkangsuuk-creative.id/">Home</a></li>
+                    <li><a class="white-text" href="#">Home</a></li>
                     <li><a class="white-text" href="https://juniorsev3n.blogspot.co.id">Blog</a></li>
                 </ul>
             </div>
