fixing for profile

--- a/index.html
+++ b/index.html
@@ -64,27 +64,27 @@
     <div class="container">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span class="span_h2"> Phasellus  </span>vestibulum lorem risus, nec suscipit lorem <span class="span_h2"> laoreet quis.</span> </h2>
+                <h2 class="center header text_h2"> Most good programmers do programming not because they expect to get paid or get adulation by the public,<span class="span_h2"> but cause it is fun to program. </span> ~LinusT</h2>
             </div>
 
             <div  class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-image-flash-on"></i>
-                    <h5 class="promo-caption">Speeds up development</h5>
+                    <h5 class="promo-caption">Web Development</h5>
                     <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">User Experience Focused</h5>
+                    <h5 class="promo-caption">System & Networking</h5>
                     <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-hardware-desktop-windows"></i>
-                    <h5 class="promo-caption">Fully responsive</h5>
+                    <h5 class="promo-caption">Database Administration</h5>
                     <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
                 </div>
             </div>
@@ -103,8 +103,8 @@
                         <img class="activator" src="img/project1.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">Laravel E-Desa <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="#">#</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
@@ -118,8 +118,8 @@
                         <img class="activator" src="img/project2.jpeg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">Alumni Collage Administration <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="#">#</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
@@ -133,8 +133,8 @@
                         <img class="activator" src="img/project3.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">Company Profile <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="#">#</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
@@ -148,7 +148,7 @@
                         <img class="activator" src="img/project4.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
+                        <span class="card-title activator grey-text text-darken-4">Laravel E-Commerce <i class="mdi-navigation-more-vert right"></i></span>
                         <p><a href="#">Project link</a></p>
                     </div>
                     <div class="card-reveal">
@@ -163,8 +163,8 @@
                         <img class="activator" src="img/project5.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">Laravel ERP <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="#">#</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
@@ -178,7 +178,7 @@
                         <img class="activator" src="img/project6.jpeg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
+                        <span class="card-title activator grey-text text-darken-4">Laravel with Store Procedures Reporting <i class="mdi-navigation-more-vert right"></i></span>
                         <p><a href="#">Project link</a></p>
                     </div>
                     <div class="card-reveal">
@@ -208,7 +208,7 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Irfan Maulana <br/>
-                            <small><em><a class="red-text text-darken-1" href="#">Developer</a></em></small></span>
+                            <small><em><a class="red-text text-darken-1" href="#">Software Engineer</a></em></small></span>
                         <p>
                             <a class="blue-text text-lighten-2" href="https://www.facebook.com/juniorsev3n">
                                 <i class="fa fa-facebook-square"></i>
