--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <nav id="nav_f" class="default_color" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
-            <a href="#" id="logo-container" class="brand-logo">juniorsev3n dot io</a>
+            <a href="#" id="logo-container" class="brand-logo">juniorsev3n</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#me">Me</a></li>
+                    <!-- <li><a href="#work">Work</a></li>
+                    <li><a href="#me">Me</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
@@ -93,7 +93,7 @@
 </div>
 
 <!--Work-->
-<div class="section scrollspy" id="work">
+<!-- <div class="section scrollspy" id="work">
     <div class="container">
         <h2 class="header text_b">Work </h2>
         <div class="row">
@@ -189,12 +189,12 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!--Parallax-->
-<div class="parallax-container">
+<!-- <div class="parallax-container">
     <div class="parallax"><img src="img/parallax1.png"></div>
-</div>
+</div> -->
 
 <!--Me-->
 <div class="section scrollspy" id="me">
@@ -236,7 +236,7 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <form class="col s12" action="#" method="post">
+                <!-- <form class="col s12" action="#" method="post">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-action-account-circle prefix white-text"></i>
@@ -259,7 +259,7 @@
                             </button>
                         </div>
                     </div>
-                </form>
+                </form> -->
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">juniorsev3n.github.io</h5>
